// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with displayNumber where there are more than one answer 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
  <sup>
    1
  </sup>
   
  6
   
   p max
  <div>
    <span>
      <b>
        1
         p
      </b>
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and one censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
  <div>
    <span>
      <b>
        4
         p
      </b>
       
    </span>
    <span>
      SE3
       
    </span>
    <span>
      (
      1.s
      )
    </span>
  </div>
  <div>
    <span>
      1 p
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and three censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
  <div>
    <span>
      <b>
        4
         p
      </b>
       
    </span>
    <span>
      SE3
       
    </span>
    <span>
      (
      3.s
      )
    </span>
  </div>
  <div>
    <span>
      3 p
       
    </span>
    <span>
      SE2
       
    </span>
    <span>
      (
      2.s
      )
    </span>
  </div>
  <div>
    <span>
      2 p
       
    </span>
    <span>
      SE1
       
    </span>
    <span>
      (
      1.s
      )
    </span>
  </div>
  <div>
    <span>
      1 p
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading score 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
  <div>
    <span>
      <b>
        1
         p
      </b>
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
  <div>
    <span>
      <b>
        5
         p
      </b>
       
    </span>
    <span>
      IN1, IN2
       
    </span>
    <span>
      (
      ta
      )
    </span>
  </div>
  <div>
    <span>
      4 p
       
    </span>
    <span>
      SE3
       
    </span>
    <span>
      (
      3.s
      )
    </span>
  </div>
  <div>
    <span>
      3 p
       
    </span>
    <span>
      SE2
       
    </span>
    <span>
      (
      2.s
      )
    </span>
  </div>
  <div>
    <span>
      2 p
       
    </span>
    <span>
      SE1
       
    </span>
    <span>
      (
      1.s
      )
    </span>
  </div>
  <div>
    <span>
      1 p
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders without score 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
</div>
`;

exports[`<ResultsExamQuestionManualScore /> sv-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
   
  6
   
   p max
  <div>
    <span>
      <b>
        5
         p
      </b>
       
    </span>
    <span>
      IN1, IN2
       
    </span>
    <span>
      (
      ta
      )
    </span>
  </div>
  <div>
    <span>
      4 p
       
    </span>
    <span>
      SE3
       
    </span>
    <span>
      (
      3.s
      )
    </span>
  </div>
  <div>
    <span>
      3 p
       
    </span>
    <span>
      SE2
       
    </span>
    <span>
      (
      2.s
      )
    </span>
  </div>
  <div>
    <span>
      2 p
       
    </span>
    <span>
      SE1
       
    </span>
    <span>
      (
      1.s
      )
    </span>
  </div>
  <div>
    <span>
      1 p
       
    </span>
    <span>
      
       
    </span>
    <span>
      (
      va
      )
    </span>
  </div>
</div>
`;
